# lists-macarenaoyague

./: CMakeLists.txt  README.md  main.cpp
lists.out.dSYM/Contents/: Info.plist
mock/: mocker.cpp  mocker.h
structures/: queue.h  stack.h
structures/lists/: circular.h  forward.h  linked.h  list.h  node.h
structures/lists/iterators/: bidirectional_iterator.h  forward_iterator.h
test/: tester.cpp  tester.h
